--- a/init.html
+++ b/init.html
@@ -51,31 +51,111 @@
         </div>
     </div>
     <!--saludo de bienvenida (CIERRE)-->
-    <!-- Seccion ultimos posts -->
-    <section class="container-fluid">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="col-md-2">
-                    <h3>Últimos Posts:</h3>
+    <!--Cartelera (INICIA)-->
+    <section class="cinema">
+        <div class="container">
+            <div class="row firstLine">
+                <h3>Películas recomendadas</h3>
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/Baywatch.jpg">
                 </div>
-                <div class="col-md-2">
-                    <img class="user img-responsive" src="assets/img/user.png" /><a href="#">Angi72 <span class="badge">42</span></a>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/beuty.jpg">
                 </div>
-                <div class="col-md-2">
-                    <img class="user img-responsive" src="assets/img/user.png" /><a href="#">ConsoRock <span class="badge">3</span></a>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/dunk.jpg">
                 </div>
-                <div class="col-md-2">
-                    <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">LigiaCautela <span class="badge">3</span></a>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/emoji.jpg">
                 </div>
-                <div class="col-md-2">
-                    <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">Jess91 <span class="badge">23</span></a>
+            </div>
+
+            <div class="row secondLine">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/popeye.jpg">
                 </div>
-                <div class="col-md-2">
-                    <img class="user img-responsive rol" src="assets/img/user.png" /><a href="#">Rodrirene <span class="badge">7</span></a>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/Spider-Man-movie.jpg">
+                </div>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/The-Dark-Tower.jpg">
+                </div>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/GS.png">
+                </div>
+            </div>
+
+            <div class="row thirdLine">
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/bob.jpg">
+                </div>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/flat.jpg">
+                </div>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/coco.jpg">
+                </div>
+
+                <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                    <img class="imgmovie" src="assets/img/Movies/thor.jpg">
                 </div>
             </div>
         </div>
     </section>
+    <!--Cartelera (CIERRE)-->
+    <!--Footer (INICIO)-->
+    <footer class="final">
+        <div class="container-fluid">
+            <div class="row">
+                <img src="assets/img/maps.png">
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 info-mt">
+                    <h3>Movie Talk</h3>
+                    <img class="big-logo" src="assets/img/mt.png">
+                    <ol CLASS="list-page">
+                        <li>AYUDA</li>
+                        <li>API</li>
+                        <li>TERMINOS </li>
+                        <li>PRIVACIDAD</li>
+                    </ol>
+                </div>
+
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 part">
+                    <h3>Aliados</h3>
+                    <p class="list-part">
+                        <img class="partners" src="assets/img/lab.png">
+                        <img class="partners" src="assets/img/ms.png">
+                        <img class="partners" src="assets/img/G.jpg"></p>
+                </div>
+
+                <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4 development">
+                    <h3>Desarrollo</h3>
+                    <ol class="list-dev">
+                        <li><a href="https://github.com/Evelynpa?tab=repositories"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                            <p class="devs">Evelyn Parra</p>
+                        </li>
+                        <li><a href="https://github.com/Alejandrabreu?tab=repositories"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                            <p class="devs">Dubrasska Piñango</p>
+                        </li>
+                        <li><a href="https://github.com/NadiaQN?tab=repositories"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                            <p class="devs">Nadia Quezada</p>
+                        </li>
+                        <li><a href="https://github.com/byanezzz?tab=repositories"><i class="fa fa-github" aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;
+                            <p class="devs">Bianca Yañez</p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!--Footer (CIERRE)-->
 </body>
 
 </html>
