--- a/reviews.html
+++ b/reviews.html
@@ -11,7 +11,7 @@
     <div id="reviewsMov">
         <div class="row page-header">
             <div class="col-md-4 col-xs-12">
-                <div class="thumbnail">
+                <div>
                     <img id="posterImg" src="https://images-na.ssl-images-amazon.com/images/M/MV5BMTg2MzI1MTg3OF5BMl5BanBnXkFtZTgwNTU3NDA2MTI@._V1_SX300.jpg" alt="Imagen foto" />
                 </div>
             </div>
@@ -45,7 +45,6 @@
                 </div>
             </div>
             <div class="col-md-2 col-xs-12">
-                <button type="button" class="btn btn-warning trailer">Trailer</button>
                 <button id="writeReview" type="button" class="btn btn-danger disabled" data-toggle="modal" data-target="#modalReview">Escribir reviews</button>
             </div>
         </div>
@@ -55,7 +54,7 @@
         <!-- Modal de Reviews -->
         <div id="modalReview" class="modal fade" role="dialog">
             <div class="modal-dialog">
-                <div class="modal-content" id="modalReviews">
+                <div class="modal-content modalReviews">
                     <div class="modal-header">
                         <button type="button" class="close" data-dismiss="modal">&times;</button>
                         <h4 class="modal-title">Dinos tu opinión y califica la película</h4>
